remove debug statements

--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -16,6 +16,9 @@ on:
     types: 
       - deploy1
       - deploy2
+      - deploy3
+      - deploy4
+
 env:
   REGISTRY_NAME: dtdemos
   CLUSTER_NAME: jahn-aks-demo
@@ -37,22 +40,24 @@ jobs:
           VERSION_NUMBER='1'
         elif [ "${{ github.event.action == 'deploy2' }} ];then
           VERSION_NUMBER='2'
+        elif [ "${{ github.event.action == 'deploy3' }} ];then
+          VERSION_NUMBER='3'
+        elif [ "${{ github.event.action == 'deploy4' }} ];then
+          VERSION_NUMBER='4'
         elif [ ! -z ${{ github.event.inputs.order-version }} ];then
           VERSION_NUMBER=${{ github.event.inputs.order-version }}
         else
           echo "Missing VERSION_NUMBER argument"
           exit 1
         fi
-        echo "Set VERSION_NUMBER to $VERSION_NUMBER"
         echo "VERSION_NUMBER=$VERSION_NUMBER" >> $GITHUB_ENV
         echo "Set VERSION_NUMBER to ${{ env.VERSION_NUMBER }}"
 
     - name: Update order-service.yml
       run: |
-        echo "Setting manifest version to $VERSION_NUMBER"
         echo "Setting manifest version to ${{ env.VERSION_NUMBER }}"
         MANIFEST_FILE=manifests/order-service.yml
-        sed -ie "s|version: .*$|version: \"${{ env.VERSION_NUMBER }}R\"|" $MANIFEST_FILE
+        sed -ie "s|version: .*$|version: \"${{ env.VERSION_NUMBER }}\"|" $MANIFEST_FILE
         sed -ie "s|image: dtdemos/dt-orders-order-service:.*$|image: dtdemos/dt-orders-order-service:${{ env.VERSION_NUMBER }}|" $MANIFEST_FILE
         cat $MANIFEST_FILE
 
