--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -37,20 +37,21 @@ jobs:
     - name: "Set new feature number"
       run: |
         if [ "${{ github.event.action == 'deploy1' }} ];then
-          VERSION_NUMBER='1'
+          VERSION_NUM='1'
         elif [ "${{ github.event.action == 'deploy2' }} ];then
-          VERSION_NUMBER='2'
+          VERSION_NUM='2'
         elif [ "${{ github.event.action == 'deploy3' }} ];then
-          VERSION_NUMBER='3'
+          VERSION_NUM='3'
         elif [ "${{ github.event.action == 'deploy4' }} ];then
-          VERSION_NUMBER='4'
+          VERSION_NUMB='4'
         elif [ ! -z ${{ github.event.inputs.order-version }} ];then
+          echo "inputs.order-version = ${{ github.event.inputs.order-version }}"
           VERSION_NUMBER=${{ github.event.inputs.order-version }}
         else
           echo "Missing VERSION_NUMBER argument"
           exit 1
         fi
-        export VERSION_NUMBER=$VERSION_NUMBER
+        echo "VERSION_NUMBER=$VERSION_NUM" >> $GITHUB_ENV
         echo "Set VERSION_NUMBER to ${{ env.VERSION_NUMBER }}"
 
     - name: Update order-service.yml
