--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -42,10 +42,10 @@ jobs:
         elif [ "${{ github.event.action == 'deploy3' }} ];then
           VERSION_NUM='3'
         elif [ "${{ github.event.action == 'deploy4' }} ];then
-          VERSION_NUMB='4'
+          VERSION_NUM='4'
         elif [ ! -z ${{ github.event.inputs.order-version }} ];then
           echo "inputs.order-version = ${{ github.event.inputs.order-version }}"
-          VERSION_NUMBER=${{ github.event.inputs.order-version }}
+          VERSION_NUM=${{ github.event.inputs.order-version }}
         else
           echo "Missing VERSION_NUMBER argument"
           exit 1
