--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -37,27 +37,27 @@ jobs:
       run: |
         if [ "${{ github.event.action == 'deploy1' }} ];then
           #VERSION_NUM='1'
-          echo "VERSION_NUMBER='1'" >> $GITHUB_ENV
+          echo "version_num='1'" >> $GITHUB_ENV
         elif [ "${{ github.event.action == 'deploy2' }} ];then
           #VERSION_NUM='2'
-          echo "VERSION_NUMBER='2'" >> $GITHUB_ENV
+          echo "version_num='2'" >> $GITHUB_ENV
         elif [ "${{ github.event.action == 'deploy3' }} ];then
           #VERSION_NUM='3'
-          echo "VERSION_NUMBER='3'" >> $GITHUB_ENV
+          echo "version_num='3'" >> $GITHUB_ENV
         elif [ "${{ github.event.action == 'deploy4' }} ];then
           #VERSION_NUM='4'
-          echo "VERSION_NUMBER='4'" >> $GITHUB_ENV
+          echo "version_num='4'" >> $GITHUB_ENV
         elif [ ! -z ${{ github.event.inputs.order-version }} ];then
           echo "inputs.order-version = ${{ github.event.inputs.order-version }}"
           #VERSION_NUM=
-          echo "VERSION_NUMBER='${{ github.event.inputs.order-version }}'" >> $GITHUB_ENV
+          echo "version_num='${{ github.event.inputs.order-version }}'" >> $GITHUB_ENV
         else
           echo "Missing version number argument"
           exit 1
         fi
         
-        echo "VERSION_NUMBER = $VERSION_NUMBER"
-        echo "Set VERSION_NUMBER to ${{ env.VERSION_NUMBER }}"
+        echo "version_num = $version_num"
+        echo "Set version_num to ${{ env.version_num }}"
 
     - name: Update order-service.yml
       run: |
