--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -35,16 +35,16 @@ jobs:
       
     - name: "Set new feature number"
       run: |
-        if [ "${{ github.event.action == 'deploy1' }} ];then
+        if [ ${{ github.event.action == 'deploy1' }} ];then
           #VERSION_NUM='1'
           echo "version_num='1'" >> $GITHUB_ENV
-        elif [ "${{ github.event.action == 'deploy2' }} ];then
+        elif [ ${{ github.event.action == 'deploy2' }} ];then
           #VERSION_NUM='2'
           echo "version_num='2'" >> $GITHUB_ENV
-        elif [ "${{ github.event.action == 'deploy3' }} ];then
+        elif [ ${{ github.event.action == 'deploy3' }} ];then
           #VERSION_NUM='3'
           echo "version_num='3'" >> $GITHUB_ENV
-        elif [ "${{ github.event.action == 'deploy4' }} ];then
+        elif [ ${{ github.event.action == 'deploy4' }} ];then
           #VERSION_NUM='4'
           echo "version_num='4'" >> $GITHUB_ENV
         elif [ ! -z ${{ github.event.inputs.order-version }} ];then
