--- a/.github/workflows/aks-deploy-order.yml
+++ b/.github/workflows/aks-deploy-order.yml
@@ -40,16 +40,16 @@ jobs:
           version_num="${{ github.event.inputs.order-version }}"
         elif [ ${{ github.event.action == 'deploy1' }} ];then
           version_num=1
-          echo "webbhook triggered version $version_num"
-        elif [ ${{ github.event.action == 'deploy2 }} ];then
+          echo "webhook triggered version $version_num"
+        elif [ ${{ github.event.action == 'deploy2' }} ];then
           version_num=2
-          echo "webbhook triggered version $version_num"
+          echo "webhook triggered version $version_num"
         elif [ ${{ github.event.action == 'deploy3' }} ];then
           version_num=3
-          echo "webbhook triggered version $version_num"
+          echo "webhook triggered version $version_num"
         elif [ ${{ github.event.action == 'deploy4' }} ];then
           version_num=4
-          echo "webbhook triggered version $version_num"
+          echo "webhook triggered version $version_num"
         else
           echo "Missing version number argument"
           exit 1
