--- a/.github/workflows/keptn-automation-evaluation.yml
+++ b/.github/workflows/keptn-automation-evaluation.yml
@@ -8,6 +8,12 @@ on:
   #schedule:
   #  - cron:  '*/5 * * * *'
 
+# Allows you to run this workflow from a POST request dispatch
+# https://pakstech.com/blog/github-actions-repository-dispatch/
+repository_dispatch:
+  types: 
+    - slo
+      
 env:
   EVALUATION_RULE: ignore #ignore, pass_on_warning, fail_on_warning
   KEPTN_PROJECT: dt-orders
