--- a/.github/workflows/keptn-automation-evaluation.yml
+++ b/.github/workflows/keptn-automation-evaluation.yml
@@ -29,10 +29,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: dtdemos/keptn-automation:0.1.1
+      image: dtdemos/keptn-automation:0.2.1
       env:
         EVALUATION_RULE: ${{ env.EVALUATION_RULE }}
-        KEPTN_BASE_URL: ${{ secrets.KEPTN_BASE_URL }}
+        KEPTN_BASE_URL: "https://rob00334.cloudautomation.live.dynatrace.com/"
         KEPTN_API_TOKEN: ${{ secrets.KEPTN_API_TOKEN }}
         KEPTN_PROJECT: ${{ env.KEPTN_PROJECT }}
         KEPTN_SERVICE: ${{ env.KEPTN_SERVICE }}
