--- a/.github/workflows/keptn-automation.yml
+++ b/.github/workflows/keptn-automation.yml
@@ -48,7 +48,7 @@ jobs:
           echo "-------------------------------------------------------"
           echo "keptn auth"
           echo "-------------------------------------------------------"
-          keptn auth -a $(KEPTN_BASE_URL)/api -e $(KEPTN_API_TOKEN)
+          keptn auth -a ${{ secrets.KEPTN_BASE_URL }}/api -e ${{ secrets.KEPTN_API_TOKEN }}
           echo "-------------------------------------------------------"
           echo "keptn status"
           echo "-------------------------------------------------------"
